--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
 
         <item name="android:windowBackground">@color/background</item>
         <item name="android:textViewStyle">@style/Theme.PassionWoman.TextAppearance</item>
+        <item name="imageButtonStyle">@style/Theme.PassionWoman.ImageButton</item>
         <item name="cardViewStyle">@style/Theme.PassionWoman.CardView</item>
     </style>
 
@@ -29,13 +30,22 @@
     </style>
 
     <style name="Theme.PassionWoman.TextAppearance.Card">
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/lora_bold</item>
+    </style>
+
+    <style name="Theme.PassionWoman.TextAppearance.Card.Large">
+        <item name="android:textSize">28sp</item>
     </style>
 
     <style name="Theme.PassionWoman.CardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardCornerRadius">16dp</item>
         <item name="android:foreground">?android:attr/selectableItemBackgroundBorderless</item>
         <item name="android:clickable">true</item>
+        <item name="cardBackgroundColor">@color/primaryVariant</item>
+    </style>
+
+    <style name="Theme.PassionWoman.ImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
