--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -6,37 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCategoryName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_default"
-        android:layout_marginTop="@dimen/margin_default"
+    <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@tools:sample/lorem"
-        style="@style/Theme.PassionWoman.TextAppearance.Title"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:paddingStart="@dimen/margin_default"
-        android:paddingEnd="0dp"
-        android:src="@drawable/ic_back"
-        app:layout_constraintTop_toTopOf="@id/tvCategoryName"
-        app:layout_constraintBottom_toBottomOf="@id/tvCategoryName"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:textAlignment="viewStart"
+        app:tv_titleTextAppearance="@style/Theme.PassionWoman.TextAppearance.Title"
+        app:tv_actionStartVisible="true"
+        app:tv_actionEndVisible="true"
+        app:tv_actionStartSrc="@drawable/ic_back" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProducts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:padding="@dimen/margin_small"
         android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/tvCategoryName"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
