--- a/app/src/main/res/layout/view_item_category.xml
+++ b/app/src/main/res/layout/view_item_category.xml
@@ -25,11 +25,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_default"
             android:layout_marginHorizontal="@dimen/margin_default"
+            android:textAppearance="@style/Theme.PassionWoman.TextAppearance.Card.Large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            tools:text="@tools:sample/lorem"
-            style="@style/Theme.PassionWoman.TextAppearance.Card.Large"/>
+            tools:text="@tools:sample/lorem" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
