--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,9 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <item name="android:windowBackground">@color/background</item>
-        <item name="android:textViewStyle">@style/Theme.PassionWoman.TextAppearance</item>
+        <item name="android:textViewStyle">@style/Theme.PassionWoman.TextView</item>
         <item name="imageButtonStyle">@style/Theme.PassionWoman.ImageButton</item>
         <item name="cardViewStyle">@style/Theme.PassionWoman.CardView</item>
+    </style>
+
+    <style name="Theme.PassionWoman.TextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance</item>
     </style>
 
     <style name="Theme.PassionWoman.TextAppearance" parent="TextAppearance.AppCompat">
@@ -25,7 +29,7 @@
     </style>
 
     <style name="Theme.PassionWoman.TextAppearance.Title">
-        <item name="android:textSize">48sp</item>
+        <item name="android:textSize">36sp</item>
         <item name="android:fontFamily">@font/lora_bold</item>
     </style>
 
@@ -37,6 +41,12 @@
     <style name="Theme.PassionWoman.TextAppearance.Card.Large">
         <item name="android:textSize">28sp</item>
         <item name="android:fontFamily">@font/lora_bold</item>
+    </style>
+
+    <style name="Theme.PassionWoman.TextAppearance.Toolbar">
+        <item name="android:textColor">@color/secondary</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">@font/lora_italic</item>
     </style>
 
     <style name="Theme.PassionWoman.CardView" parent="Widget.MaterialComponents.CardView">
