--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="onSecondary">#fff</color>
     <color name="background">#151515</color>
     <color name="text">@color/primaryVariant</color>
+
+    <color name="alert_info">@color/primaryVariant</color>
+    <color name="alert_error">#ff9494</color>
 </resources>
