--- a/app/src/main/res/layout/view_item_category.xml
+++ b/app/src/main/res/layout/view_item_category.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_default"
             android:layout_marginHorizontal="@dimen/margin_default"
-            android:textAppearance="@style/Theme.PassionWoman.TextAppearance.Card.Large"
+            android:textAppearance="@style/Theme.PassionWoman.TextAppearance.Card"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
