--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
 
     <dimen name="image_size_item">200dp</dimen>
     <dimen name="image_size_full">600dp</dimen>
+
+    <dimen name="onboarding_indicator_height">80dp</dimen>
 </resources>
