--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,12 @@
     <color name="onSecondary">#fff</color>
     <color name="background">#151515</color>
     <color name="text">@color/primaryVariant</color>
+    <color name="hint">#8FFF</color>
+    <color name="error">#ff9494</color>
 
     <color name="alert_info">@color/primaryVariant</color>
-    <color name="alert_error">#ff9494</color>
+    <color name="alert_error">@color/error</color>
 
     <color name="onboarding_banner_shade">#98000000</color>
+    <color name="bg_login_shade">#C000</color>
 </resources>
