--- a/app/src/main/res/layout/view_item_onboarding_page.xml
+++ b/app/src/main/res/layout/view_item_onboarding_page.xml
@@ -29,13 +29,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_small"
-        android:layout_marginHorizontal="@dimen/margin_default"
+        android:layout_marginHorizontal="@dimen/onboarding_navigation_width"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@id/btnAction"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1"
         app:layout_goneMarginBottom="@dimen/onboarding_indicator_height"
-        style="@style/Theme.PassionWoman.TextAppearance.Title"
+        style="@style/Theme.PassionWoman.TextAppearance.Subtitle"
         tools:lines="3"
         tools:text="@tools:sample/lorem/random"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
