--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="image_size_full">600dp</dimen>
 
     <dimen name="onboarding_indicator_height">80dp</dimen>
+    <dimen name="onboarding_navigation_width">50dp</dimen>
 </resources>
