Added profile screen

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -22,4 +22,8 @@
         <attr name="ev_message" format="string"/>
         <attr name="ev_action" format="string"/>
     </declare-styleable>
+
+    <attr name="coloredButtonStyle" format="reference"/>
+    <attr name="textButtonStyle" format="reference"/>
+    <attr name="outlineButtonStyle" format="reference"/>
 </resources>
