--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -7,9 +7,9 @@
         android:icon="@drawable/ic_home"/>
 
     <item
-        android:id="@+id/menu_favorites"
-        android:title="@string/menu_favorites"
-        android:icon="@drawable/ic_favorites"/>
+        android:id="@+id/menu_search"
+        android:title="@string/menu_search"
+        android:icon="@drawable/ic_search"/>
 
     <item
         android:id="@+id/menu_cart"
