--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,9 @@
         <item name="cardViewStyle">@style/Theme.PassionWoman.CardView</item>
         <item name="editTextStyle">@style/Theme.PassionWoman.EditText</item>
         <item name="textInputStyle">@style/Theme.PassionWoman.TextInput</item>
+        <item name="coloredButtonStyle">@style/Theme.PassionWoman.Button.Colored</item>
+        <item name="textButtonStyle">@style/Theme.PassionWoman.Button.Text</item>
+        <item name="outlineButtonStyle">@style/Theme.PassionWoman.Button.Outline</item>
     </style>
 
     <style name="Theme.PassionWoman.TextView" parent="Widget.MaterialComponents.TextView">
@@ -40,11 +43,6 @@
         <item name="android:fontFamily">@font/lora_bold_italic</item>
     </style>
 
-    <style name="Theme.PassionWoman.TextAppearance.Card">
-        <item name="android:textSize">28sp</item>
-        <item name="android:fontFamily">@font/lora_bold_italic</item>
-    </style>
-
     <style name="Theme.PassionWoman.TextAppearance.AppName">
         <item name="android:textColor">@color/secondary</item>
         <item name="android:textSize">24sp</item>
@@ -53,6 +51,11 @@
     <style name="Theme.PassionWoman.TextAppearance.Button">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/lora_bold_italic</item>
+    </style>
+
+    <style name="Theme.PassionWoman.TextAppearance.Dialog">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/lora_italic</item>
     </style>
 
     <style name="Theme.PassionWoman.CardView" parent="Widget.MaterialComponents.CardView">
@@ -71,6 +74,15 @@
         <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance.Button</item>
         <item name="android:padding">@dimen/margin_small</item>
         <item name="cornerRadius">@dimen/corners_default</item>
+    </style>
+
+    <style name="Theme.PassionWoman.Button.Outline" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance.Button</item>
+        <item name="android:padding">@dimen/margin_small</item>
+        <item name="cornerRadius">@dimen/corners_default</item>
+        <item name="strokeColor">@color/secondary</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:textColor">@color/secondary</item>
     </style>
 
     <style name="Theme.PassionWoman.Button.Text" parent="Widget.MaterialComponents.Button.TextButton">
