--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -22,7 +22,7 @@
         app:tv_title="@string/edit_profile_sign_up"
         app:tv_actionStartVisible="true"
         app:tv_actionStartSrc="@drawable/ic_back"
-        app:tv_titleTextAppearance="@style/Theme.PassionWoman.TextAppearance.Title"/>
+        app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputNameWrapper"
