--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,38 +24,7 @@
     </style>
 
     <style name="Theme.PassionWoman.TextView" parent="Widget.MaterialComponents.TextView">
-        <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/onPrimary</item>
-        <item name="android:fontFamily">@font/lora_italic</item>
-        <item name="android:textSize">14sp</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextAppearance.Title">
-        <item name="android:textSize">36sp</item>
-        <item name="android:fontFamily">@font/lora_bold_italic</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextAppearance.Subtitle">
-        <item name="android:textSize">28sp</item>
-        <item name="android:fontFamily">@font/lora_bold_italic</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextAppearance.AppName">
-        <item name="android:textColor">@color/secondary</item>
-        <item name="android:textSize">24sp</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextAppearance.Button">
-        <item name="android:textSize">18sp</item>
-        <item name="android:fontFamily">@font/lora_bold_italic</item>
-    </style>
-
-    <style name="Theme.PassionWoman.TextAppearance.Dialog">
-        <item name="android:textSize">18sp</item>
-        <item name="android:fontFamily">@font/lora_italic</item>
+        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance</item>
     </style>
 
     <style name="Theme.PassionWoman.CardView" parent="Widget.MaterialComponents.CardView">
@@ -71,13 +40,15 @@
     
     <style name="Theme.PassionWoman.Button.Colored" parent="Widget.MaterialComponents.Button">
         <item name="android:backgroundTint">@color/secondary</item>
-        <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance.Button</item>
+        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance.Button</item>
         <item name="android:padding">@dimen/margin_small</item>
         <item name="cornerRadius">@dimen/corners_default</item>
     </style>
 
-    <style name="Theme.PassionWoman.Button.Outline" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance.Button</item>
+    <style
+        name="Theme.PassionWoman.Button.Outline"
+        parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance.Button</item>
         <item name="android:padding">@dimen/margin_small</item>
         <item name="cornerRadius">@dimen/corners_default</item>
         <item name="strokeColor">@color/secondary</item>
@@ -85,8 +56,10 @@
         <item name="android:textColor">@color/secondary</item>
     </style>
 
-    <style name="Theme.PassionWoman.Button.Text" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textAppearance">@style/Theme.PassionWoman.TextAppearance.Button</item>
+    <style
+        name="Theme.PassionWoman.Button.Text"
+        parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textAppearance">@style/Typography.PassionWoman.TextAppearance.Button</item>
         <item name="android:textColor">@color/secondary</item>
     </style>
 
