--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -13,7 +13,7 @@
         android:layout_height="?android:attr/actionBarSize"
         android:textAlignment="viewStart"
         app:tv_title="@string/categories_title"
-        app:tv_titleTextAppearance="@style/Theme.PassionWoman.TextAppearance.Title"
+        app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
