--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
             android:layout_marginHorizontal="@dimen/margin_small"
-            android:textAppearance="@style/Theme.PassionWoman.TextAppearance.Dialog"
+            android:textAppearance="@style/Typography.PassionWoman.TextAppearance.Dialog"
             android:textAlignment="center"
             tools:text="@tools:sample/lorem/random"
             tools:lines="2"/>
