--- a/app/src/main/res/layout/view_error.xml
+++ b/app/src/main/res/layout/view_error.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textAppearance="@style/Theme.PassionWoman.TextAppearance.Title"
+        android:textAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/ivBanner"
         app:layout_constraintBottom_toTopOf="@id/btnAction"
