Set up new margins

--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -148,15 +148,13 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAddToCart"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/margin_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
             android:text="@string/product_card_add_to_cart"
             app:layout_constraintTop_toBottomOf="@id/rvColors"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintWidth_percent=".8"
             app:layout_constraintVertical_bias="0"
             style="@style/Theme.PassionWoman.Button.Colored"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
