--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -49,6 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:paddingStart="4dp"
+            android:paddingEnd="0dp"
             app:ccp_autoDetectCountry="true"
             app:ccp_contentColor="@color/onPrimary"
             app:ccp_defaultLanguage="RUSSIAN"
@@ -70,7 +72,8 @@
             android:inputType="phone"
             android:maxLines="1"
             android:imeOptions="actionDone"
-            tools:text="9999999999" />
+            tools:text="9999999999"
+            tools:ignore="RtlSymmetry" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
