--- a/app/src/main/res/layout/view_alert.xml
+++ b/app/src/main/res/layout/view_alert.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,8 +20,8 @@
                 android:id="@+id/ivIcon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="@dimen/margin_small"
-                android:layout_marginVertical="@dimen/margin_small"
+                android:layout_marginStart="@dimen/margin_default"
+                android:layout_marginVertical="@dimen/margin_default"
                 tools:src="@drawable/ic_error"/>
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -30,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_margin="@dimen/margin_small"
+                android:layout_margin="@dimen/margin_default"
                 android:lines="2"
                 android:gravity="center_vertical"
                 android:ellipsize="end"
