--- a/app/src/main/res/layout/layout_profile_header.xml
+++ b/app/src/main/res/layout/layout_profile_header.xml
@@ -4,17 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/margin_default">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/layoutAvatarWrapper"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:elevation="4dp"
+        android:layout_marginVertical="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
         app:layout_constraintWidth_percent=".33"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivAvatar"
