--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="margin_extra_large">64dp</dimen>
 
     <dimen name="corners_default">24dp</dimen>
+    <dimen name="corners_switch">100sp</dimen>
 
     <dimen name="image_size_item">200dp</dimen>
     <dimen name="image_size_full">600dp</dimen>
