--- a/app/src/main/res/layout/fragment_in_development.xml
+++ b/app/src/main/res/layout/fragment_in_development.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        app:srcCompat="@drawable/banner_in_development"/>
+        tools:src="@drawable/banner_in_development"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
