--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -14,6 +14,8 @@
         android:textAlignment="viewStart"
         app:tv_title="@string/categories_title"
         app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
+        app:tv_actionEndVisible="true"
+        app:tv_actionEndSrc="@drawable/ic_search"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
